--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "next": "13.1.1",
+    "next-share": "^0.19.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-share-icons": "^1.1.2",
+    "react-social-icons": "^5.15.0",
+    "react-social-share-icons": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "8.30.0",
